namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-electronic-monitoring-crime-matching-dev/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-electronic-monitoring-crime-matching-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps-emac-engineers"
    cloud-platform.justice.gov.uk/slack-alert-channel: "hmpps-em-crime-matching-alerts-dev"
    cloud-platform.justice.gov.uk/application: "Electronic Monitoring Crime Mapping"
    cloud-platform.justice.gov.uk/owner: "HMPPS Community of Practice: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-electronic-monitoring-crime-matching-api.git,https://github.com/ministryofjustice/hmpps-electronic-monitoring-crime-matching-ui.git"
    cloud-platform.justice.gov.uk/team-name: "hmpps-em-probation-devs"
